# ScienceMode4_c_library

./: .gitignore  BuildConfiguration.pri  BuildConfigurationOutput.pri  CMakeLists.txt  DestinationDirectories.pri  README.md  ScienceMode.pro
.github/workflows/: linux_release.yml  macos_release.yml  windows64_release.yml  windows_mingw_release.yml  windows_release.yml
ScienceMode_Library/: ScienceMode_Library.pri  ScienceMode_Library.pro
ScienceMode_Library/include/dyscom-level/: smpt_dl_client.h  smpt_dl_definitions.h  smpt_dl_definitions_data_types.h  smpt_dl_packet_client.h  smpt_dl_packet_server.h  smpt_dl_packet_utils.h  smpt_dl_packet_validity.h
ScienceMode_Library/include/general/: smpt_client.h  smpt_client_cmd_lists.h  smpt_client_data.h  smpt_client_power.h  smpt_client_utils.h  smpt_definitions.h  smpt_definitions_data_types.h  smpt_definitions_file_transfer.h  smpt_definitions_internal.h  smpt_definitions_power.h  smpt_file.h  smpt_messages.h  smpt_packet_number_generator.h
ScienceMode_Library/include/general/packet/: smpt_packet_client.h  smpt_packet_general.h  smpt_packet_internal.h  smpt_packet_server.h  smpt_packet_utils.h  smpt_packet_validity.h
ScienceMode_Library/include/general/packet_input_buffer/: smpt_packet_input_buffer.h  smpt_packet_input_buffer_definitions.h  smpt_packet_input_buffer_internal.h
ScienceMode_Library/include/general/packet_output_buffer/: smpt_packet_output_buffer.h
ScienceMode_Library/include/general/serial_port/: smpt_serial_port.h  smpt_serial_port_linux.h  smpt_serial_port_macos.h  smpt_serial_port_windows.h
ScienceMode_Library/include/low-level/: smpt_ll_client.h  smpt_ll_definitions.h  smpt_ll_definitions_data_types.h  smpt_ll_messages.h  smpt_ll_packet_client.h  smpt_ll_packet_server.h  smpt_ll_packet_validity.h
ScienceMode_Library/include/mid-level/: smpt_ml_client.h  smpt_ml_definitions.h  smpt_ml_definitions_data_types.h  smpt_ml_packet_client.h  smpt_ml_packet_server.h  smpt_ml_packet_utils.h  smpt_ml_packet_validity.h
ScienceMode_Library/src/dyscom-level/: smpt_dl_client.c  smpt_dl_definitions_data_types.c  smpt_dl_packet_client.c  smpt_dl_packet_server.c  smpt_dl_packet_utils.c  smpt_dl_packet_validity.c
ScienceMode_Library/src/general/: smpt_client.c  smpt_client_cmd_lists.c  smpt_client_data.c  smpt_client_power.c  smpt_client_utils.c  smpt_definitions_data_types.c  smpt_definitions_file_transfer.c  smpt_definitions_power.c  smpt_file.c  smpt_messages.c  smpt_packet_number_generator.c
ScienceMode_Library/src/general/packet/: smpt_packet_client.c  smpt_packet_general.c  smpt_packet_internal.c  smpt_packet_server.c  smpt_packet_utils.c  smpt_packet_validity.c
ScienceMode_Library/src/general/packet_input_buffer/: smpt_packet_input_buffer.c  smpt_packet_input_buffer_internal.c
ScienceMode_Library/src/general/packet_output_buffer/: smpt_packet_output_buffer.c
ScienceMode_Library/src/general/serial_port/: smpt_serial_port.c  smpt_serial_port_linux.c  smpt_serial_port_macos.c  smpt_serial_port_windows.c
ScienceMode_Library/src/low-level/: smpt_ll_client.c  smpt_ll_definitions_data_types.c  smpt_ll_messages.c  smpt_ll_packet_client.c  smpt_ll_packet_server.c  smpt_ll_packet_validity.c
ScienceMode_Library/src/mid-level/: smpt_ml_client.c  smpt_ml_definitions_data_types.c  smpt_ml_packet_client.c  smpt_ml_packet_server.c  smpt_ml_packet_utils.c  smpt_ml_packet_validity.c
ScienceMode_Library_Test/: ScienceMode_Library_Test.pro  smptlus_test
ScienceMode_Library_Test/include/dyscom-level/: test_dl_common.h  test_dl_examples.h  test_dl_get.h  test_dl_init.h  test_dl_packet_client_server.h  test_dl_power_module.h  test_dl_send_file.h  test_dl_send_live_data.h  test_dl_send_mmi.h  test_dl_stop.h  test_dl_sys.h
ScienceMode_Library_Test/include/general/: test_ack.h  test_definitions.h  test_file.h  test_file_block.h  test_find_packet.h  test_general_smpt.h  test_get_battery_status_ack.h  test_get_device_id_ack.h  test_get_file.h  test_get_file_ack.h  test_get_main_status_ack.h  test_get_stim_status_ack.h  test_get_version_ack.h  test_packet_client_server.h  test_remove_file.h  test_serial_port.h  test_set_power.h
ScienceMode_Library_Test/include/low-level/: test_ll_channel_config.h  test_ll_channel_config_ack.h  test_ll_client_cmd_lists.h  test_ll_definitions.h  test_ll_examples.h  test_ll_init.h  test_ll_init_ack.h  test_ll_init_ping.h  test_ll_packet_client_server.h
ScienceMode_Library_Test/include/mid-level/: test_ml_examples.h  test_ml_packet_client_server.h
ScienceMode_Library_Test/src/: main.c
ScienceMode_Library_Test/src/dyscom-level/: test_dl_examples.c  test_dl_get.c  test_dl_init.c  test_dl_packet_client_server.c  test_dl_power_module.c  test_dl_send_file.c  test_dl_send_live_data.c  test_dl_send_mmi.c  test_dl_stop.c  test_dl_sys.c
ScienceMode_Library_Test/src/general/: test_ack.c  test_file.c  test_file_block.c  test_find_packet.c  test_general_smpt.c  test_get_battery_status_ack.c  test_get_device_id_ack.c  test_get_file.c  test_get_file_ack.c  test_get_main_status_ack.c  test_get_stim_status_ack.c  test_get_version_ack.c  test_packet_client_server.c  test_remove_file.c  test_serial_port.c  test_set_power.c
ScienceMode_Library_Test/src/low-level/: test_ll_channel_config.c  test_ll_channel_config_ack.c  test_ll_client_cmd_lists.c  test_ll_examples.c  test_ll_init.c  test_ll_init_ack.c  test_ll_init_ping.c  test_ll_packet_client_server.c
ScienceMode_Library_Test/src/mid-level/: test_ml_examples.c  test_ml_packet_client_server.c
cmake/: ScienceModeConfig.cmake.in
